# claude-buddy-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_EN.md  cli.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
public/: index.html
src/: __init__.py  buddy_core.py  cli.py
